# WebsocketCPP

./: .travis.yml  CMakeLists.txt  README.md  installDependencies.sh
.github/workflows/: test.yml
examples/: CMakeLists.txt  ClientTest.cpp  ServerTest.cpp
src/: Listener.hpp
src/Client/: WebSocketClient.cpp  WebSocketClient.hpp
src/Server/: Connection.cpp  Connection.hpp  WebSocketServer.cpp  WebSocketServer.hpp
test/: CMakeLists.txt
test/Client/: WebSocketClient.cpp
test/Server/: WebSocketServer.cpp
